--- a/kubernetes/core/values/dev.yaml
+++ b/kubernetes/core/values/dev.yaml
@@ -1,5 +1,7 @@
 replicas: 1
-image: yuvadius/core:latest
+image:
+  repository: yuvadius/core
+  tag: latest
 env: dev
 containerPort: 8080
 ingressPort: 8080
