--- a/.github/actions/aws-warm-up/action.yml
+++ b/.github/actions/aws-warm-up/action.yml
@@ -20,3 +20,4 @@ runs:
         wget https://github.com/helmfile/helmfile/releases/download/v0.168.0/helmfile_0.168.0_linux_amd64.tar.gz
         tar xzf helmfile_0.168.0_linux_amd64.tar.gz
         sudo mv helmfile /usr/local/bin/
+      shell: bash
