--- a/kubernetes/common/templates/deployment.yaml
+++ b/kubernetes/common/templates/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: {{ .Release.Name }}
-          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
+          image: {{ .Values.postrixImage.repository }}:{{ .Values.postrixImage.tag }}
           ports:
             - containerPort: {{ .Values.containerPort }}
           env:
