--- a/.github/workflows/build-and-deploy-adhoc.yml
+++ b/.github/workflows/build-and-deploy-adhoc.yml
@@ -2,15 +2,10 @@ name: Build and deploy adhoc
 
 on:
   workflow_dispatch:
-    inputs:
-      branch_name:
-        required: true
-        description: 'The branch name of the adhoc deployment'
-        type: string
   pull_request:
 
 jobs:
-  build_and_deploy_adhoc:
+  build_and_push:
     permissions:
       contents: read
       id-token: write
@@ -19,22 +14,19 @@ jobs:
       matrix:
         service: [core]
 
-    uses: ./.github/workflows/build-and-deploy.yml
+    uses: ./.github/workflows/build-and-push.yml
     with:
-      environment: dev
       service_name: ${{ matrix.service }}
-      namespace: ${{ inputs.branch_name || github.head_ref || github.ref_name }}
-      cluster_name: development
     secrets: inherit
 
-  comment_pr:
+  deploy:
     permissions:
       contents: read
       id-token: write
       pull-requests: write
 
     runs-on: ubuntu-latest
-    needs: build_and_deploy_adhoc
+    needs: build_and_push
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -49,7 +41,7 @@ jobs:
         run: |
           helmfile sync -f kubernetes/helmfile.yaml \
           --environment=dev \
-          --namespace=${{ inputs.branch_name || github.head_ref || github.ref_name }} \
+          --namespace=${{ steps.repo_warm_up.outputs.adhoc_namespace }} \
           -l group=app \
           --set postrixImage.tag=${{ steps.repo_warm_up.outputs.git_hash }}
 
@@ -59,5 +51,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           title: "Service URLs"
           message: |
-            [Core](https://${{ inputs.branch_name || github.head_ref || github.ref_name }}-core.postrix.io)
+            [Core](https://${{ steps.repo_warm_up.outputs.adhoc_namespace }}-core.postrix.io)
       
