--- a/.github/workflows/build-and-deploy-adhoc.yml
+++ b/.github/workflows/build-and-deploy-adhoc.yml
@@ -20,36 +20,17 @@ jobs:
     secrets: inherit
 
   deploy:
+    needs: build_and_push
+
     permissions:
       contents: read
       id-token: write
       pull-requests: write
 
-    runs-on: ubuntu-latest
-    needs: build_and_push
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - uses: ./.github/actions/repo-warm-up
-        id: repo_warm_up
-
-      - name: Configure AWS credentials
-        uses: ./.github/actions/aws-warm-up
-
-      - name: Deploy to Kubernetes
-        run: |
-          helmfile sync -f kubernetes/helmfile.yaml \
-          --environment=dev \
-          --namespace=${{ steps.repo_warm_up.outputs.adhoc_namespace }} \
-          -l group=app \
-          --set postrixImage.tag=${{ steps.repo_warm_up.outputs.git_hash }}
-
-      - name: Comment PR
-        uses: ./.github/actions/comment-pr
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          title: "Service URLs"
-          message: |
-            [Core](https://${{ steps.repo_warm_up.outputs.adhoc_namespace }}-core.postrix.io)
-      
+    uses: ./.github/workflows/deploy.yml
+    with:
+      environment: dev
+      environment_label: adhoc
+      comment_pr: true
+    secrets: inherit
+    
