--- a/.github/workflows/build-and-deploy-main.yml
+++ b/.github/workflows/build-and-deploy-main.yml
@@ -2,27 +2,40 @@ name: Build and deploy main to prod/sandbox
 
 on:
   workflow_dispatch:
-  # workflow_run:
-  #   workflows: ["Terraform Apply"]
-  #   types:
-  #     - completed
+  workflow_run:
+    workflows: ["Terraform Apply"]
+    types:
+      - completed
 
 jobs:
-  build_and_deploy_main:
+  build_and_push:
     permissions:
       contents: read
       id-token: write
 
     strategy:
       matrix:
-        include:
-          - { target: dev, service: core, cluster_name: development }
-          - { target: prod, service: core, cluster_name: production }
+        service: [core]
     
-    uses: ./.github/workflows/build-and-deploy.yml
+    uses: ./.github/workflows/build-and-push.yml
     with:
-      environment: ${{ matrix.target }}
       service_name: ${{ matrix.service }}
-      namespace: ${{ matrix.target }}
-      cluster_name: ${{ matrix.cluster_name }}
+    secrets: inherit
+
+  deploy:
+    needs: build_and_push
+    
+    permissions:
+      contents: read
+      id-token: write
+      pull-requests: write
+
+    strategy:
+      matrix:
+        environment: [dev, prod]
+
+    uses: ./.github/workflows/deploy.yml
+    with:
+      environment: ${{ matrix.environment }}
+      namespace: ${{ matrix.environment }}
     secrets: inherit
