Add latest tag on deploy main

--- a/.github/workflows/build-and-deploy-main.yml
+++ b/.github/workflows/build-and-deploy-main.yml
@@ -20,6 +20,7 @@ jobs:
     uses: ./.github/workflows/build-and-push.yml
     with:
       service_name: ${{ matrix.service }}
+      latest_tag: true
     secrets: inherit
 
   deploy:
