--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -32,3 +32,19 @@ jobs:
             echo "Deleting namespace: $namespace"
             kubectl delete namespace $namespace
           done
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          
+      - name: Remove all tags besides "latest"
+        run: |
+          REPOSITORY="yuvadius/core"
+          
+          # Pull all tags
+          docker pull $REPOSITORY --all-tags
+          
+          # Delete all tags except latest
+          docker images $REPOSITORY --format "{{.Repository}}:{{.Tag}}" | grep -v "latest" | xargs -r docker rmi 
