--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ on:
         required: false
         description: 'Whether to comment on the PR with the service adhoc URLs'
         type: boolean
-        default: true
+        default: false
 
 jobs:
   deploy:
