--- a/kubernetes/core/values/dev.yaml
+++ b/kubernetes/core/values/dev.yaml
@@ -1,6 +1,7 @@
 replicas: 1
 postrixImage:
   repository: yuvadius/core
+  tag: latest
 env: dev
 containerPort: 8080
 ingressPort: 8080
@@ -9,9 +10,9 @@ serviceTargetPort: 8080
 serviceType: ClusterIP
 resources:
   limits:
-    cpu: 500m
+    cpu: 200m
     memory: 512Mi
   requests:
-    cpu: 250m
+    cpu: 100m
     memory: 256Mi
 ingress: true
