--- a/kubernetes/core/values/local.yaml
+++ b/kubernetes/core/values/local.yaml
@@ -1,6 +1,7 @@
 replicas: 1
 postrixImage:
   repository: yuvadius/core
+  tag: latest
 env: local
 containerPort: 8080
 ingressPort: 8080
@@ -9,8 +10,8 @@ serviceTargetPort: 8080
 serviceType: LoadBalancer
 resources:
   limits:
-    cpu: 500m
+    cpu: 200m
     memory: 512Mi
   requests:
-    cpu: 250m
+    cpu: 100m
     memory: 256Mi
