--- a/.github/actions/comment-pr/tsconfig.json
+++ b/.github/actions/comment-pr/tsconfig.json
@@ -1,11 +1,3 @@
 {
-    "compilerOptions": {
-        "target": "ES2018",
-        "module": "commonjs",
-        "outDir": "dist",
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "skipLibCheck": true
-    }
+  "extends": "../../../tsconfig.json"
 }
