--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "20"
   },
   "scripts": {
-    "lint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
-    "lint:fix": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix",
+    "lint": "eslint \"**/*.{js,jsx,ts,tsx,yml,yaml}\"",
+    "lint:fix": "eslint \"**/*.{js,jsx,ts,tsx,yml,yaml}\" --fix",
     "test": "jest --config jest.config.ts"
   },
   "devDependencies": {
@@ -21,11 +21,13 @@
     "@typescript-eslint/parser": "^8.21.0",
     "eslint": "^9.18.0",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-yml": "^1.16.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "yaml-eslint-parser": "^1.2.3"
   }
 }
