--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-yml": "^1.16.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
+    "jsonc-eslint-parser": "^2.4.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
