--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "20"
   },
   "scripts": {
-    "lint": "eslint \"**/*.{js,jsx,ts,tsx,yml,yaml}\"",
-    "lint:fix": "eslint \"**/*.{js,jsx,ts,tsx,yml,yaml}\" --fix",
+    "lint": "eslint \"**/*.{js,jsx,ts,tsx,json,yml,yaml}\"",
+    "lint:fix": "eslint \"**/*.{js,jsx,ts,tsx,json,yml,yaml}\" --fix",
     "test": "jest --config jest.config.ts"
   },
   "devDependencies": {
@@ -21,6 +21,7 @@
     "@typescript-eslint/parser": "^8.21.0",
     "eslint": "^9.18.0",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsonc": "^2.19.1",
     "eslint-plugin-yml": "^1.16.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
