--- a/scripts/package.json
+++ b/scripts/package.json
@@ -2,7 +2,7 @@
   "name": "scripts",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "script": "ts-node"
   },
   "dependencies": {
     "tweetnacl-sealedbox-js": "^1.2.0"
