--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,16 +11,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      # - name: Use Node.js
-      #   uses: actions/setup-node@v4
-      #   with:
-      #     node-version: '20'
-      #     cache: 'npm'
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
       
-      # - name: Install dependencies
-      #   run: |
-      #     npm ci
-      #     npm ci --prefix services/core
+      - name: Install dependencies
+        run: |
+          npm ci
           
       - name: Run ESLint
         run: npm run lint 
