--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "eslint": "^9.18.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsonc": "^2.19.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-yml": "^1.16.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "jsonc-eslint-parser": "^2.4.0",
+    "prettier": "^3.4.2",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
