--- a/.github/workflows/build-and-deploy-adhoc.yml
+++ b/.github/workflows/build-and-deploy-adhoc.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        service: [core]
+        service: [joby]
 
     uses: ./.github/workflows/build-and-push.yml
     with:
