--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: '20.x'
 
-      - run: npm ci && npm ci --prefix services/core
+      - run: npm ci && npm ci --prefix services/joby
       - name: Run Jest Test Suite
         run: npm test
         env:
