--- a/kubernetes/joby/values/prod.yaml
+++ b/kubernetes/joby/values/prod.yaml
@@ -1,13 +1,13 @@
 replicas: 1
 postrixImage:
-  repository: yuvadius/core
+  repository: yuvadius/joby
   tag: latest
-env: local
+env: prod
 containerPort: 8080
 ingressPort: 8080
 servicePort: 8080
 serviceTargetPort: 8080
-serviceType: LoadBalancer
+serviceType: ClusterIP
 resources:
   limits:
     cpu: 200m
@@ -15,3 +15,4 @@ resources:
   requests:
     cpu: 100m
     memory: 256Mi
+ingress: true
