--- a/services/joby/package.json
+++ b/services/joby/package.json
@@ -1,17 +1,19 @@
 {
   "name": "hello-world-function",
   "version": "1.0.0",
+  "type": "module",
   "description": "A simple Hello World Cloud Function",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "engines": {
     "node": "20"
   },
   "scripts": {
-    "start-local": "ENV=local ts-node src/index.ts",
+    "start-local": "ENV=local nodemon",
     "start-server": "ts-node --transpileOnly src/index.ts"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "whatsapp": "file:../../packages/whatsapp"
   }
 }
