--- a/services/joby/package.json
+++ b/services/joby/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "hello-world-function",
+  "name": "joby",
   "version": "1.0.0",
   "type": "module",
   "description": "A simple Hello World Cloud Function",
   "main": "dist/index.js",
   "engines": {
-    "node": "20"
+    "node": "22.14.0"
   },
   "scripts": {
-    "start-local": "ENV=local nodemon",
-    "start-server": "ts-node --transpileOnly src/index.ts"
+    "build": "tsc",
+    "clean": "rm -rf dist",
+    "start:local": "NODE_ENV=development ENV=local nodemon",
+    "start:server": "NODE_ENV=production ENV=prod node --conditions production dist/index.js",
+    "test": "jest --config jest.config.ts"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
