--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,16 +8,46 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
 
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js 20.x
+      - name: Use Node.js 22.x
         uses: actions/setup-node@v2
         with:
-          node-version: '20.x'
+          node-version: '22.x'
 
       - run: npm ci && npm ci --prefix services/joby
       - name: Run Jest Test Suite
         run: npm test
         env:
           CI: true
+
+      - name: Generate Coverage Report
+        id: coverage
+        run: |
+          COVERAGE=$(cat coverage/coverage-summary.json | jq -r '.total.lines.pct')
+          SUMMARY=$(cat coverage/coverage-summary.json | jq -r '
+            "| Category | Coverage |\n" +
+            "|----------|----------|\n" +
+            "| Lines | \(.total.lines.pct)% |\n" +
+            "| Statements | \(.total.statements.pct)% |\n" +
+            "| Functions | \(.total.functions.pct)% |\n" +
+            "| Branches | \(.total.branches.pct)% |"
+          ')
+          echo "coverage=$COVERAGE" >> $GITHUB_OUTPUT
+          echo "summary<<EOF" >> $GITHUB_OUTPUT
+          echo "$SUMMARY" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      - name: Comment PR
+        uses: ./.github/actions/comment-pr
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          title: "Test Coverage Report"
+          block: |
+            Coverage: ${{ steps.coverage.outputs.coverage }}%
+          message: |
+            ${{ steps.coverage.outputs.summary }}
