--- a/packages/whatsapp/package.json
+++ b/packages/whatsapp/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "A package that will contain whatsapp api helper functions",
   "type": "module",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
   "exports": {
-    ".": "./src/index.ts"
+    "production": "./dist/index.js",
+    "default": "./src/index.ts"
   },
   "scripts": {
     "build": "tsc",
+    "clean": "rm -rf dist",
     "test": "jest --config jest.config.ts"
   },
   "author": "",
