--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: ./.github/actions/repo-warm-up
 
       - name: Use Node.js 22.x
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
           node-version: '22.x'
 
@@ -32,8 +32,8 @@ jobs:
       - name: Generate Coverage Report
         id: coverage
         run: |
-          COVERAGE=$(cat coverage/coverage-summary.json | jq -r '.total.lines.pct')
-          SUMMARY=$(cat coverage/coverage-summary.json | jq -r '
+          COVERAGE=$(cat coverage/coverage-final.json | jq -r '.total.lines.pct')
+          SUMMARY=$(cat coverage/coverage-final.json | jq -r '
             "| Category | Coverage |\n" +
             "|----------|----------|\n" +
             "| Lines | \(.total.lines.pct)% |\n" +
