--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,8 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+      pages: write      # required for deploy-pages
+      id-token: write   # required for deploy-pages
 
     steps:
       - name: Checkout
@@ -52,12 +54,6 @@ jobs:
           echo "$SUMMARY" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
-      - name: Deploy Coverage Report to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./coverage/lcov-report
-
       - name: Comment PR
         uses: ./.github/actions/comment-pr
         with:
@@ -69,4 +65,8 @@ jobs:
             ${{ steps.coverage.outputs.summary }}
 
             **Test Report:** [View details here](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
-            **Coverage Report:** [View Report](https://<YOUR_GITHUB_USERNAME>.github.io/<YOUR_REPOSITORY>/coverage/lcov-report/index.html)
+
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
+        with:
+          artifact_name: test-report
