--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,5 +67,12 @@ jobs:
           message: |
             ${{ steps.coverage.outputs.summary }}
 
-            **Test Report:** [View details here](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
             **Test Report:** [View detailed coverage report](http://postrix-test-reports.s3-website-us-east-1.amazonaws.com/${{ github.sha }})
+
+      - name: Check 100% Coverage
+        run: |
+          COVERAGE=$(cat coverage/coverage-summary.json | jq -r '.total.lines.pct')
+          if [ "$COVERAGE" != "100" ]; then
+            echo "Error: Test coverage is not 100%. Current coverage: $COVERAGE%"
+            exit 1
+          fi
