--- a/services/capish/Dockerfile
+++ b/services/capish/Dockerfile
@@ -27,7 +27,8 @@ RUN npm run build
 # RUN cd services/capish && npm prune --production
 
 # Copy website files to dist
-RUN cp -r src/PlacementBusiness/Website dist/
+RUN mkdir -p dist/PlacementBusiness && \
+    cp -r services/capish/src/PlacementBusiness/Website dist/PlacementBusiness/
 
 # Production image
 FROM node:22.13.1-slim
