--- a/kubernetes/common/templates/deployment.yaml
+++ b/kubernetes/common/templates/deployment.yaml
@@ -30,14 +30,14 @@ spec:
               memory: {{ .Values.resources.requests.memory }}
           readinessProbe:
             httpGet:
-              path: /
+              path: /health
               port: {{ .Values.containerPort }}
             initialDelaySeconds: 10
             periodSeconds: 5
             failureThreshold: 3
           livenessProbe:
             httpGet:
-              path: /
+              path: /health
               port: {{ .Values.containerPort }}
             initialDelaySeconds: 10
             periodSeconds: 10
