--- a/services/capish/package.json
+++ b/services/capish/package.json
@@ -15,6 +15,8 @@
     "test": "jest --config jest.config.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.758.0",
+    "@aws-sdk/credential-providers": "^3.758.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "whatsapp": "file:../../packages/whatsapp"
