Added service account with access to secrets for pods

--- a/kubernetes/common/templates/deployment.yaml
+++ b/kubernetes/common/templates/deployment.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         app: {{ .Release.Name }}
     spec:
+      serviceAccountName: {{ .Release.Name }}
       containers:
         - name: {{ .Release.Name }}
           image: {{ .Values.postrixImage.repository }}:{{ .Values.postrixImage.tag }}
