--- a/.github/workflows/build-and-deploy-main.yml
+++ b/.github/workflows/build-and-deploy-main.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        service: [joby, capish]
+        service: [joby, capish, cannon]
     
     uses: ./.github/workflows/build-and-push.yml
     with:
