--- a/kubernetes/helmfile.yaml
+++ b/kubernetes/helmfile.yaml
@@ -90,4 +90,4 @@ releases:
       app: cannon
       group: app
     values:
-      - ./capish/values/{{ .Environment.Name }}.yaml
+      - ./cannon/values/{{ .Environment.Name }}.yaml
