--- a/services/cannon/package.json
+++ b/services/cannon/package.json
@@ -16,6 +16,10 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.14.0"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.11.11"
   }
 }
