--- a/services/capish/package.json
+++ b/services/capish/package.json
@@ -15,6 +15,7 @@
     "test": "jest --config jest.config.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.772.0",
     "@aws-sdk/client-secrets-manager": "^3.758.0",
     "@aws-sdk/credential-providers": "^3.758.0",
     "dotenv": "^16.4.5",
