--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,8 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
-      pages: write      # required for deploy-pages
-      id-token: write   # required for deploy-pages
+      # pages: write      # required for deploy-pages
+      # id-token: write   # required for deploy-pages
 
     steps:
       - name: Checkout
