--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       contents: read
       pull-requests: write
       # pages: write      # required for deploy-pages
-      # id-token: write   # required for deploy-pages
+      id-token: write
 
     steps:
       - name: Checkout
